<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_shuffle_description">Shuffle</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="acc_label_card_number">Card number</string>
    <string name="acc_label_expiry_date">Expiration date</string>
    <string name="acc_label_zip">ZIP Code</string>
    <string name="acc_label_zip_short">ZIP</string>
    <string name="add_card">Add a new debit or credit card to make purchases in this app.</string>
    <string name="address_city_required">Please enter your city</string>
    <string name="address_county_required">Please enter your county</string>
    <string name="address_label_address">Address</string>
    <string name="address_label_address_line1">Address line 1</string>
    <string name="address_label_address_line1_optional">Address line 1 (optional)</string>
    <string name="address_label_address_line2">Address line 2</string>
    <string name="address_label_address_line2_optional">Address line 2 (optional)</string>
    <string name="address_label_address_optional">Address (optional)</string>
    <string name="address_label_apt">Apt.</string>
    <string name="address_label_apt_optional">Apt. (optional)</string>
    <string name="address_label_city">City</string>
    <string name="address_label_city_optional">City (optional)</string>
    <string name="address_label_country">Country</string>
    <string name="address_label_county">County</string>
    <string name="address_label_county_optional">County (optional)</string>
    <string name="address_label_name">Name</string>
    <string name="address_label_name_optional">Name (optional)</string>
    <string name="address_label_phone_number">Phone number</string>
    <string name="address_label_phone_number_optional">Phone number (optional)</string>
    <string name="address_label_postal_code">Postal code</string>
    <string name="address_label_postal_code_optional">Postal code (optional)</string>
    <string name="address_label_postcode">Postcode</string>
    <string name="address_label_postcode_optional">Postcode (optional)</string>
    <string name="address_label_province">Province</string>
    <string name="address_label_province_optional">Province (optional)</string>
    <string name="address_label_region_generic">State / Province / Region</string>
    <string name="address_label_region_generic_optional">State / Province / Region (optional)</string>
    <string name="address_label_state">State</string>
    <string name="address_label_state_optional">State (optional)</string>
    <string name="address_label_zip_code">ZIP code</string>
    <string name="address_label_zip_code_optional">ZIP code (optional)</string>
    <string name="address_label_zip_postal_code">ZIP/Postal code</string>
    <string name="address_label_zip_postal_code_optional">ZIP / Postal code (optional)</string>
    <string name="address_name_required">Please enter your name</string>
    <string name="address_phone_number_required">Please enter your phone number</string>
    <string name="address_postal_code_invalid">Your postal code is invalid</string>
    <string name="address_postcode_invalid">Your postcode is invalid</string>
    <string name="address_province_required">Please enter your province</string>
    <string name="address_region_generic_required">Please enter your State/Province/Region</string>
    <string name="address_required">Please enter your address</string>
    <string name="address_shipping_address">Shipping Address</string>
    <string name="address_state_required">Please enter your state</string>
    <string name="address_zip_invalid">Your ZIP code is invalid.</string>
    <string name="address_zip_postal_invalid">Your ZIP/Postal code is invalid</string>
    <string name="expiry_date_hint">MM/YY</string>
    <string name="expiry_label_short">Expiry</string>
    <string name="invalid_card_number">"Your card's number is invalid."</string>
    <string name="invalid_cvc">"Your card's security code is invalid."</string>
    <string name="error_default_client">Sorry about that. You can go back to Expo home or try to reload the Experience.</string>
    <string name="error_header">Something went wrong.</string>
    <string name="info_activity_name">Info</string>
    <string name="info_app_name_placeholder">App Name</string>
    <string name="info_clear_data">Clear Data</string>
    <string name="info_id">ID: %s</string>
    <string name="info_is_verified">Is Verified: %s</string>
    <string name="info_published_time">Published Time: %s</string>
    <string name="info_sdk_version">SDK Version: %s</string>
    <string name="info_show_manifest">Show Manifest</string>
    <string name="view_error_log">View error log</string>
</resources>