<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/view_error_log">
        <TextView android:textSize="24.0sp" android:textColor="@color/white" android:id="@id/error_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/error_header" android:layout_centerHorizontal="true" />
        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/error_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="40.0dip" android:text="@string/error_default_client" android:layout_centerHorizontal="true" />
        <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="140.0dip" android:layout_marginRight="40.0dip" android:weightSum="2.0" android:layout_below="@id/editText" android:layout_centerHorizontal="true">
            <host.exp.exponent.views.ExponentImageButton android:textSize="15.0sp" android:textColor="@color/colorPrimaryDark" android:id="@id/home_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_home_white_36dp" android:layout_weight="1.0" />
            <host.exp.exponent.views.ExponentImageButton android:textSize="15.0sp" android:textColor="@color/colorPrimaryDark" android:id="@id/reload_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_refresh_white_36dp" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:textSize="13.0sp" android:textColor="@color/errorLogButton" android:gravity="center" android:id="@id/view_error_log" android:paddingLeft="20.0dip" android:paddingTop="20.0dip" android:paddingRight="20.0dip" android:paddingBottom="20.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/view_error_log" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>